--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <li>
                 <div class="service-card">
                   <div class="card-icon">
-<!--                     <img
+                    <img
                       src="./assets/images/service-icon-1.png"
                       width="100"
                       height="100"
@@ -206,7 +206,7 @@
                       alt="service icon"
                       class="w-100"
                     />
-                  </div> -->
+                  </div>
 
                   <div>
                     <h3 class="h3 card-title">Consultation & Legal Advice</h3>
@@ -222,14 +222,14 @@
               <li>
                 <div class="service-card">
                   <div class="card-icon">
-<!--                     <img
+                    <img
                       src="./assets/images/service-icon-2.png"
                       width="100"
                       height="100"
                       loading="lazy"
                       alt="service icon"
                       class="w-100"
-                    /> -->
+                    />
                   </div>
 
                   <div>
@@ -248,14 +248,14 @@
               <li>
                 <div class="service-card">
                   <div class="card-icon">
-<!--                     <img
+                    <img
                       src="./assets/images/service-icon-3.png"
                       width="100"
                       height="100"
                       loading="lazy"
                       alt="service icon"
                       class="w-100"
-                    /> -->
+                    />
                   </div>
 
                   <div>
@@ -271,14 +271,14 @@
 
               <li class="service-banner">
                 <figure>
-<!--                   <img
+                  <img
                     src="./assets/images/blind.png"
                     width="409"
                     height="467"
                     loading="lazy"
                     alt="service banner"
                     class="w-100"
-                  /> -->
+                  />
                 </figure>
               </li>
 
@@ -311,14 +311,14 @@
               <li>
                 <div class="service-card">
                   <div class="card-icon">
-<!--                     <img
+                    <img
                       src="./assets/images/service-icon-5.png"
                       width="100"
                       height="100"
                       loading="lazy"
                       alt="service icon"
                       class="w-100"
-                    /> -->
+                    />
                   </div>
 
                   <div>
